---
source: src/parser/tests/binary.rs
expression: "Snapshot((input, math))"
---
frac 1.44 2 frac(x)(3.14)

Interm {
| IntermExpr {
| | Fraction(
| | | Number("1.44"),
| | | Number("2")
| | )
| }
}

Interm {
| IntermExpr {
| | Fraction(
| | | OpenParen
| | | | Interm {
| | | | | IntermExpr {
| | | | | | Variable("x")
| | | | | }
| | | | }
| | | |
| | | CloseParen,
| | | OpenParen
| | | | Interm {
| | | | | IntermExpr {
| | | | | | Number("3.14")
| | | | | }
| | | | }
| | | |
| | | CloseParen
| | )
| }
}


